my-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: my-app
  name: my-app
  namespace: my-app
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: my-app
            port:
              name: http
        pathType: ImplementationSpecific
